[fix]:修复重定向bug

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,8 +4,10 @@ spring:
     username: jiansk
     password: 921521
   thymeleaf:
-      #½ûÓÃÒ³Ãæ»º´æ--²»ÀûÓÚĞÔÄÜ
+      #ç¦ç”¨é¡µé¢ç¼“å­˜--ä¸åˆ©äºæ€§èƒ½
       cache: false
   mvc:
-      #ÅäÖÃ¾²Ì¬×ÊÔ´Â·¾¶--·ñÔò½«Í¨¹ı¿ØÖÆÆ÷ÇëÇó¿ÉÄÜ±¨404
+      #é…ç½®é™æ€èµ„æºè·¯å¾„--å¦åˆ™å°†é€šè¿‡æ§åˆ¶å™¨è¯·æ±‚å¯èƒ½æŠ¥404
       static-path-pattern: /static/**
+server:
+  port: 8081
